--- a/views/admin/verify_list.html
+++ b/views/admin/verify_list.html
@@ -156,7 +156,7 @@
 						   if(data==0){
 								return data = '<button class="layui-btn layui-btn-small view">查看</button><!--button class="layui-btn layui-btn-small layui-btn-normal pass">通过</button--><button class="layui-btn layui-btn-small layui-btn-warm setremark">备注</button>';
 							}else{
-								return data = '<button class="layui-btn layui-btn-small view">查看</button>';
+								return data = '<button class="layui-btn layui-btn-small view">查看</button><button class="layui-btn layui-btn-small layui-btn-warm setremark">备注</button>';
 							}
 				           
 				        }
